traefik/5-whoami-meta.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: whoami
